@startuml Diagrama de Classe Mobile
title Diagrama de Classe do Aplicativo Mobile

left to right direction

class Pedido {
  id: number
  status: number
  data_pedido: string
  cliente_id: number
  representante_id: number
  observacao: string
}

class ItemPedido {
  id: number
  pedido_id: number
  produto_id: number
  quantidade: number
  valor_venda: number
  observacao: string
}

class Produto {
  id: number
  codigo: number
  descricao: string
  preco: number
}

class Cliente {
  id: number
  nome: string
  endereco: string
}

Cliente "1" <--- "0..*" Pedido
Pedido "1" ---> "1..*" ItemPedido
ItemPedido "0..*" ---> "1" Produto

@enduml